inventory: enable radicle node/httpd/explorer on domain host

--- a/inventory/host_vars/domain/vars.yml
+++ b/inventory/host_vars/domain/vars.yml
@@ -675,6 +675,60 @@ bentopdf_hostname: "pdf.{{ domain }}"
 
 ########################################################################
 #                                                                      #
+# radicle_node                                                         #
+#                                                                      #
+########################################################################
+
+radicle_node_enabled: true
+
+radicle_node_hostname: "seed.{{ domain }}"
+
+radicle_node_config_rad_passphrase: "{{ vault_radicle_node_config_rad_passphrase }}"
+
+radicle_node_config_seedingpolicy_default: block
+
+radicle_node_container_node_host_bind_port: ""
+
+########################################################################
+#                                                                      #
+# /radicle_node                                                        #
+#                                                                      #
+########################################################################
+
+########################################################################
+#                                                                      #
+# radicle_httpd                                                        #
+#                                                                      #
+########################################################################
+
+radicle_httpd_enabled: true
+
+radicle_httpd_hostname: "{{ radicle_node_hostname }}"
+
+########################################################################
+#                                                                      #
+# /radicle_httpd                                                       #
+#                                                                      #
+########################################################################
+
+########################################################################
+#                                                                      #
+# radicle_explorer                                                     #
+#                                                                      #
+########################################################################
+
+radicle_explorer_enabled: true
+
+radicle_explorer_hostname: "explorer.{{ domain }}"
+
+########################################################################
+#                                                                      #
+# /radicle_explorer                                                    #
+#                                                                      #
+########################################################################
+
+########################################################################
+#                                                                      #
 # authentik                                                            #
 #                                                                      #
 ########################################################################
